# catsoop-grade-calculator

./: README.md  pyproject.toml
catsoop_grade_calculator/: __init__.py  general.py
catsoop_grade_calculator/parsers/: __init__.py  base_parser.py  circuits.py  py.py  request.py
examples/: example.py
src/catsoop-grade-calculator/: __init__.py  general.py
src/catsoop-grade-calculator/parsers/: base_parser.py  circuits.py  py.py  request.py
